<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">商刻APP框架</string>

    <!-- app数据根目录 -->
    <string name="dir">/Android/data/com.eshangke.framework</string>
    <!--拍照临时文件-->
    <string name="camera_temp">/cameratemp/</string>
    <!--Bitmap缓存路径-->
    <string name="bitmap_cache">/bitmapcache/</string>
    <!-- apk下载文件路径 -->
    <string name="apk_download">/apkdownload/</string>

    <!-- 版本更新和提示 -->
    <string name="update_new_hint">版本更新</string>
    <string name="version_new_hint">有新版本啦！更新内容如下：</string>
    <string name="check_new_hint">拍照或文字回答</string>
    <string name="no_update_hint">暂不更新</string>
    <string name="update_now_hint">更新</string>
    <string name="update_desc_hint">描述:</string>
    <string name="update_dialog_title">发现新版本v</string>
    <string name="prompt">提示</string>
    <string name="check_connection">网络又调皮了，检查一下吧~</string>
    <string name="server_net_error">请求失败,网络或服务器发生异常</string>
    <string name="server_error">服务器发生异常</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="settings">设置</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="lost_session">登录失效,请重新登录</string>
    <string name="relogin">重新登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_app_message">确定要退出吗?</string>
    <string name="version_update">版本更新</string>
    <string name="version_update_hint">已是最新版本</string>

    <!--加载数据提示-->
    <string name="amicable_view_tryagain">轻触屏幕，重新加载试试</string>
    <string name="amicable_view_loading">正在加载&#8230;</string>
    <string name="service_error_text1">网络不稳定</string>
    <string name="maybe_reason">可能原因:</string>
    <string name="service_error_text2">尚未接入互联网</string>
    <string name="service_error_text3">安全软件禁止访问网络</string>
    <string name="service_error_text4">服务器发生未知异常</string>
    <string name="empty_list">这里啥也没有！</string>

    <!-- 登录 -->
    <string name="prompt_password">密码</string>
    <string name="login_title_info">登录界面</string>
    <string name="indent_code">验证码</string>
    <string name="set_password">设定密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="get_identifier_code">获取验证码</string>
    <string name="login_title">用户/密码登陆</string>

    <!--XlistView-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_loaded_all">已加载所有内容</string>

    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <string name="action_settings">设置</string>
    <string name="navigation_book">BookRecyclerView</string>


    <string name="input_book_info">请在编辑框输入书籍信息</string>
    <string name="edit_book_info">修改编号为%1$s的书籍信息</string>
    <string name="input_book_title">请输入书名</string>
    <string name="input_book_price">请输入价格</string>
    <string name="add_book"><u>添加到列表</u></string>
    <string name="cancel_update_book"><u>取消更新</u></string>
    <string name="update_book"><u>更新到列表</u></string>
    <string name="is_show_book_id">是否显示编号</string>
    <string name="add_book_warn">标题或价格不能为空</string>
    <string name="book_id">编号:</string>
    <string name="book_title">书名:</string>
    <string name="book_price">价格:%1$s元</string>
    <string name="update"><u>修改</u></string>
    <string name="delete"><u>删除</u></string>
    <string name="no_data">暂时没有数据</string>

    <string name="download_manager">下载管理</string>
    <string name="remove">移除</string>
    <string name="stop">停止</string>
    <string name="start">开始下载</string>


    <string name="save_sample">Sqlite示例</string>
    <string name="file_download_sample">网络示例</string>
    <string name="xlist_sample">Xlist例子</string>
    <string name="image_detail_sample">图片查看例子</string>
    <string name="coordinator_layout_sample">CoordinatorLayout例子</string>
    <string name="ndk_sample">NDK例子</string>
    <string name="anim_sample">动画例子</string>
    <string name="property_anim_sample">属性动画例子</string>
    <string name="recorder_sample">语音例子</string>
    <string name="customerview_sample">自定义View例子</string>
    <string name="jpush_sample">极光推送例子</string>
    <string name="media_player_sample">视频播放例子</string>
    <string name="channel_edit_sample">Tab频道编辑</string>
    <string name="bottom_tab_sample">BootomTab切换例子</string>
    <string name="swiperefresh_sample">Swipe刷新</string>
    <string name="share_sample">分享示例子</string>
    <string name="share_auth_sample">授权示例子</string>
    <string name="umeng_share_sample">友盟分享示例子</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="retry_refresh_news">点我一下,重新加载</string>
    <string name="loading">加载中…</string>
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="rx_android_sample">RxAndroid例子</string>
    <string name="book_detail">图书详情</string>
    <string name="book_list">图书列表</string>
    <string name="jpush_open_notifi">打开自定义的Activity</string>
</resources>
