<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_gravity="center"
        android:src="@drawable/loading_error" >
    </ImageView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/view_bg" />

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/maybe_reason"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/error_msg1"
            style="@style/service_error_text"
            android:layout_marginLeft="5dp"
            android:text="@string/service_error_text1" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_msg2"
        style="@style/service_error_text"
        android:text="@string/service_error_text2" />

    <TextView
        android:id="@+id/error_msg3"
        style="@style/service_error_text"
        android:text="@string/service_error_text4" />

    <TextView
        android:id="@+id/error_msg4"
        style="@style/service_error_text"
        android:text="@string/service_error_text3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/amicable_view_tryagain"
        android:textColor="@color/blue"
        android:textSize="14sp" />

</LinearLayout>