<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:layout_collapseMode="pin"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/act_save_set_book_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/act_save_input_book_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/input_book_info"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/act_save_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_book_title"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/act_save_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_book_price"
            android:inputType="number"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/act_save_cancel_update_button"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_update_book"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/act_save_add_button"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <Switch
        android:id="@+id/act_save_show_book_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="12dp"
        android:text="@string/is_show_book_id" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/act_save_data_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" />

    <TextView
        android:id="@+id/act_save_no_data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no_data"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>